raw_errors.txt
cargo :    Compiling rustygrep v0.1.1 (C:\Users\saves\Downloads\rustygrep)
At line:1 char:1
+ cargo test --no-run 2>&1 | Out-File -FilePath "C:\Users\saves\Downloa ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling ru...oads\rustygrep):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\pretty_output_test.rs:4:5
  |
4 | use rustygrep::search::SearchEngine;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\pretty_output_test.rs:5:5
  |
5 | use rustygrep::walker::FileWalker;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\search_test.rs:4:5
  |
4 | use rustygrep::search::SearchEngine;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\search_test.rs:5:5
  |
5 | use rustygrep::walker::FileWalker;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
  --> tests\common\mod.rs:34:35
   |
34 | pub fn make_cli(args: &[&str]) -> rustygrep::cli::Cli {
   |                                   ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
   |
   = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

error[E0433]: cannot find module or crate `rustygrep` in this scope
  --> tests\common\mod.rs:38:5
   |
38 |     rustygrep::cli::Cli::parse_from(full_args)
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
   |
   = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

warning: unused import: `clap::Parser`
  --> tests\common\mod.rs:35:9
   |
35 |     use clap::Parser;
   |         ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0433]: cannot find module or crate `rustygrep` in this scope
 --> tests\pretty_output_test.rs:7:40
  |
7 | fn search_pretty(args: &[&str]) -> Vec<rustygrep::search::FileMatches> {
  |                                        ^^^^^^^^^ use of unresolved module or unlinked crate `rustygrep`
  |
  = help: if you wanted to use a crate named `rustygrep`, use `cargo add rustygrep` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
warning: `rustygrep` (test "search_test") generated 1 warning
error: could not compile `rustygrep` (test "search_test") due to 4 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `rustygrep` (test "pretty_output_test") generated 1 warning (1 duplicate)
error: could not compile `rustygrep` (test "pretty_output_test") due to 5 previous errors; 1 warning emitted
